Issue #1994044 by Mark Carver: .element-invisible causes mobile to scroll horizontally

--- a/bootstrap_subtheme/less/overrides.less
+++ b/bootstrap_subtheme/less/overrides.less
@@ -107,6 +107,13 @@ body {
   border-top: 1px solid #E5E5E5;
 }
 
+// Element invisible fix
+.element-invisible {
+  margin: 0;
+  padding: 0;
+  width: 1px;
+}
+
 // Branding.
 .navbar .logo {
   margin-top: 5px;
